Remove flex to fix alignment with other buttons in Firefox

--- a/docs/app/components/theme-selector/theme-selector.component.less
+++ b/docs/app/components/theme-selector/theme-selector.component.less
@@ -1,8 +1,6 @@
 @import "../../assets/styles/variables.less";
 
 .theme-selector-button {
-    display: flex;
-    align-items: center;
     height: 50px;
     font-size: 0.9375rem;
     border: none;
